--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+   <meta name="apple-itunes-app" content= "app-id=6743403663, app-argument=https://apps.apple.com/gb/app/simpill-pharmacy/id6743403663"
+  <meta name="google-play-app" content="app-id=co.uk.simpill.app">
   <title>Mouse‑reactive Circles</title>
   <style>
     /* Full‑bleed black background */
