--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="apple-itunes-app" content= "app-id=6743403663, app-argument=https://apps.apple.com/gb/app/simpill-pharmacy/id6743403663"
   <meta name="google-play-app" content="app-id=co.uk.simpill.app">
-  <title>Mouse‑reactive Circles</title>
+  <title>Keystage Apps - Educational Software Development</title>
   <style>
     /* Full‑bleed black background */
     html, body { height: 100%; margin: 0; }
@@ -43,14 +43,14 @@
   </style>
 </head>
 <body>
-  <canvas id="scene" aria-label="Animated circles reacting to pointer movement"></canvas>
+  <canvas id="scene" aria-label=""></canvas>
 
   <div class="overlay">
     <h1>Key Stage Apps</h1>
     <p>Coming soon</p>
   </div>
 
-  <div class="hint">Move your mouse (or touch) to attract the circles.</div>
+  <div class="hint"></div>
 
   <script>
     // ——— Setup ———
